--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -56,7 +56,10 @@
     padding-left: 30px;
     font-family: var(--fonte3);
     font-size: 3.5vw;
+ }
 
+ section > p {
+    padding: 1em;
  }
 
   section.normal {
@@ -67,12 +70,28 @@
   section.imagem {
     background-color: rgb(85, 85, 85);
     color: white;
+    box-shadow: inset 6px 6px 15px 0px rgba(0, 0, 0, 0.744);
+    background-size: cover;
+    background-attachment: fixed;
   }
 
   section.imagem > p {
     display: inline-block;
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.488);
+    background-color: rgba(0, 0, 0, 0.605);
+    text-shadow: 2px 2px 2px black;
+  }
+
+  section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+
+  }
+
+  section#img02 {
+    background-image: url(../imagens/background002.jpg);
+
+
   }
 
  footer {
